# nia_eng_page

./: .editorconfig  .env.sample  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  NEXT-STEPS.md  README.md  bookmarks.html  compose.yml  index.html  makefile  mkdocs.yml  package-lock.json  package.json  pages.md  pyproject.toml  tray_app.spec
.cursor/rules/: context7.mdc
.github/workflows/: auto-version.yml  build-matrix.yml  ci.yml  release.yml
docs/: activeContext.md  bookmark-conversion.md  context.md  deployment.md  environment.md  index.md  installation.md  productContext.md  progress.md  projectbrief.md  reflection-tray-application.md  site-structure-plan.md  systemPatterns.md  tasks.md  tasks_new.md  technical.md  testing.md  troubleshooting.md  user-guide.md
docs/archive/: creative-phase-architecture-decisions.md  creative-phase-complete.md  creative-phase-summary.md  desktop-tray-application-20241219.md  implementation-plan.md  nia-engineering-portal-implementation-20241219.md  progress.md  techContext.md  wireframes.md
js/: service-worker-register.js  service-worker.js
launchers/: README.md  launch-tray-port.bat  launch-tray.bat  launch-tray.sh
pages/: README.md  b23.html  car2.html  committees.html  cr21-engineer.html  cr21-operator.html  cr21.html  cr29-engineer.html  cr29-operator.html  cr29.html  cr30-engineer.html  cr30-operator.html  cr30.html  cta.html  dante.html  engineering.html  firewalls.html  index.html  kvm.html  network.html  plenary-engineer.html  plenary-operator.html  plenary.html  senate-engineer.html  senate-operator.html  senate.html  sw.js
pages/css/: common.css  main.css
pages/js/: bookmarks-parser.js  performance.js  service-worker-register.js  service-worker.js
scripts/: add_graceful_degradation.py  add_performance_monitoring.py  build_release.py  build_tray.py  convert-bookmarks.js  create_desktop_shortcut.py  launch_tray.py  optimize_css.py  serve.py  version.py
support/: compose.yml
tests/: __init__.py  conftest.py  run_tests.py
tests/accessibility/: test_accessibility.py
tray_app/: __init__.py  config.json  config_manager.py  gui_components.py  main.py  server_controller.py  tray_app.py
(+14 files in other folders)
