[project]
name = "nia-eng-page"
version = "0.1.6"
description = "Simple Local Web Pages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "black>=25.9.0",
    "mkdocs>=1.6.1",
    "psutil>=7.1.0",
    "pyinstaller>=6.16.0",
    "pystray>=0.19.5",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "ruff>=0.13.2",
    "tk>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "N",    # pep8-naming
    "T20",  # flake8-print
]
ignore = [
    "E501",  # Line too long (handled by Black)
    "S101",  # Use of assert (common in tests)
    "T201",  # Print statements (acceptable in scripts)
    "S603",  # subprocess call - legitimate in build scripts
    "S607",  # partial executable path - legitimate in build scripts
    "S110",  # try-except-pass - acceptable for cleanup code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "T201"]
"scripts/*" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["tray_app", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
exclude = [
    "tests/performance/test_performance.py",
    "tests/e2e/test_link_validation.py",
    "tests/accessibility/test_accessibility.py"
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
